# word-nerd

./: .dockerignore  .env.example  README.md  todo.md
common-rs/: Cargo.toml
common-rs/src/: lib.rs
dockerise/: docker-compose.local.yml  docker-compose.yml  local-start.nu  local.Dockerfile  local.nu
rpc/: Cargo.toml  build.rs
rpc/proto/: account.proto  dictionary.proto
rpc/src/: _.rs  account.rs  dictionary.rs  lib.rs
services/account/: .env.example  Cargo.toml  Dockerfile  readme.md  run.nu
services/account/src/: account_service.rs  auth.rs  db.rs  google.rs  main.rs
services/account/src/db/: database.rs  mod.rs  models.rs
services/dictionary/: Cargo.toml  Dockerfile
services/dictionary/src/: cloudflare_bypasser.rs  dictionary.rs  env.rs  main.rs  oxford.rs  service.rs  utils.rs  vocabulary.rs
services/dictionary/src/db/: database.rs  mod.rs  models.rs  repository.rs
services/dictionary/src/dtos/: mod.rs
services/dictionary/src/models/: audio.rs  definition.rs  mod.rs  oxford.rs  shared.rs  vocabulary.rs
services/dictionary/src/tests/: utils.rs
services/dictionary/src/tests/htmls/oxford/: cat_1.html  fling_1.html  husky_1.html  refrain_1.html  take_1.html
services/search/: Cargo.toml
services/search/src/: env.rs  main.rs
web-api/: .dockerignore  Cargo.toml  Dockerfile  run.nu
web-api/src/: env.rs  main.rs  middleware.rs  rpc.rs
web-api/src/endpoints/: auth.rs  dict.rs  mod.rs
web-api/src/routes/: auth.rs  dict.rs  mod.rs
web-client/: README.md  index.html  manifest.json  package-lock.json  package.json  tsconfig.json
web-client/src/: App.svelte  app.css  types.ts
web-client/src/api/: index.ts
web-client/src/lib/: Autocomplete.svelte  GoogleBtn.svelte  Topbar.svelte
web-client/src/routes/: Home.svelte  Login.svelte  NotFound.svelte
web-client/src/store/: user.ts
