[package]
name = "web-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web-api"
path = "src/main.rs"

[dependencies]
rpc = { path = "../rpc"}
tonic = "0.9.1"
actix-web = "4"
actix-cors = "0.6.4"
env_logger = "0.10.0"
log = "0.4.17"
dotenv = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

