[package]
name = "web-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web-api"
path = "src/main.rs"

[dependencies]
rpc = { path = "../rpc"}
common-rs = { path = "../common-rs"}
tonic = "0.9.1"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
tower-http = { version = "0.4.1", features = ["cors"] }
axum = { version = "0.6.18", features = ["headers"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }

