[package]
name = "account"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "account-ms"
path = "src/main.rs"

[dependencies]
rpc = { path = "../../rpc" }
common-rs = { path = "../../common-rs"}

tonic = "0.9.1"
dotenv = "0.15.0"
tonic-health = "0.9.1"
jwt = { version = "0.16.0", features = ["openssl"] }
openssl = "0.10.45"
base64 = "0.21.0"
reqwest = { version = "0.11.14", features = ["json", "rustls-tls"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
mongodb = { version = "2.5.0", features = ["bson-chrono-0_4"]}
chrono = { version = "0.4.26", features = ["serde"] }
jsonwebtoken = "8.3.0"
