[package]
name = "dictionary"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dictionary-ms"
path = "src/main.rs"

[dependencies]
rpc = { path = "../../rpc" }

tonic = "0.9.1"
tonic-health = "0.9.1"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
mongodb = { version = "2.5.0", features = ["bson-chrono-0_4"]}
chrono = { version = "0.4.26", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["json", "rustls-tls", "native-tls", "gzip"] }
scraper = { version = "0.17.1", features = ["atomic"]}
fake_user_agent = "0.1.4"
regex = "1.8.4"
